--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
+html, body {
+    overflow-x: hidden; /* 수평 스크롤 숨기기 */
+    overflow-y: hidden; /* 수평 스크롤 숨기기 */
+}
+
 /* .map_wrap와 그 하위 요소에 공통 스타일 적용 */
 .map_wrap, .map_wrap * {
-    margin: 0;
-    padding: 0;
     font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
-    font-size: 12px;
 }
 
 /* 지도를 표시할 컨테이너 스타일 */
 .map_wrap {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 100%;
 }
 
 .daumIndex {
@@ -30,12 +32,11 @@
         }
         .title-container {
             padding: 10px; /* 내부 여백 */
-            font-size: 26px;
         }
         .title-container h2 {
             margin: 0;
-            font-size: 16px; /* 제목 크기 */
             color: #ffffff; /* 제목 색상 */
+            font-size: 18px;
         }
         .fld_inside {
             margin: 10px;
