--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ html, body {
     bottom: 0;
     width: 270px; /* 메뉴 너비 */
     height: 250px;
-    margin: 5px 0 5px 5px;
+    margin: 5px 0;
     padding: 5px;
     overflow-y: auto; /* 세로 스크롤 추가 */
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
@@ -158,7 +158,7 @@ html, body {
 
 /* 장소 정보(info)의 패딩 설정 */
 #placesList .item .info {
-    padding: 10px 0 10px 55px; /* 좌측 여백 추가 */
+    padding: 10px 0 10px 10px; /* 좌측 여백 추가 */
 }
 
 /* 정보 영역에서 부가 주소 회색 */
@@ -168,7 +168,7 @@ html, body {
 
 /* 지번 주소 스타일 */
 #placesList .info .jibun {
-    padding-left: 26px; /* 좌측 여백 */
+    padding-left: 5px; /* 좌측 여백 */
     background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;
 }
 
