--- a/style.css
+++ b/style.css
@@ -88,11 +88,11 @@ html, body {
     display: none; /* 기본적으로 표시됨 */
     position: absolute;
     top: 50px;
-    left: 70px;
+    left: 90px;
     bottom: 0;
-    width: 270px; /* 메뉴 너비 */
-    height: 250px;
-    margin: 5px 0;
+    width: 250px; /* 메뉴 너비 */
+    height: 140px;
+    margin: 10px;
     padding: 5px;
     overflow-y: auto; /* 세로 스크롤 추가 */
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
