--- a/style.css
+++ b/style.css
@@ -106,15 +106,6 @@ html, body {
     background: #fff;
 }
 
-/* 메뉴 내의 수평선 스타일 */
-#menu_wrap hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #5F5F5F; /* 회색 선 */
-    margin: 3px 0;
-}
-
 /* 옵션 영역 가운데 정렬 */
 #menu_wrap .option {
     text-align: center;
@@ -138,7 +129,6 @@ html, body {
 /* 장소 목록 항목 스타일 */
 #placesList .item {
     position: relative;
-    border-bottom: 1px solid #888; /* 항목 간 구분선 */
     overflow: hidden;
     min-height: 65px; /* 최소 높이 */
 }
@@ -158,7 +148,7 @@ html, body {
 
 /* 장소 정보(info)의 패딩 설정 */
 #placesList .item .info {
-    padding: 10px 0 10px 10px; /* 좌측 여백 추가 */
+    padding: 10px; /* 좌측 여백 추가 */
 }
 
 /* 정보 영역에서 부가 주소 회색 */
@@ -168,7 +158,7 @@ html, body {
 
 /* 지번 주소 스타일 */
 #placesList .info .jibun {
-    padding-left: 5px; /* 좌측 여백 */
+    padding-left: 26px; /* 좌측 여백 */
     background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;
 }
 
@@ -185,11 +175,6 @@ html, body {
 /* 각각의 마커 위치 설정 */
 #placesList .item .marker_1 {
     background-position: 0 -10px;  }
-#placesList .item .marker_2 {
-    background-position: 0 -56px;  }
-#placesList .item .marker_3 {
-    background-position: 0 -102px;  }
-    
 #header-container2 {
     z-index: 1;
     height : 50px;
