--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 html, body {
     overflow-x: hidden; /* 수평 스크롤 숨기기 */
     overflow-y: hidden; /* 수평 스크롤 숨기기 */
-    padding: 0;
-    margin: 0;
 }
 
 /* .map_wrap와 그 하위 요소에 공통 스타일 적용 */
@@ -18,12 +16,12 @@ html, body {
 }
 
 .daumIndex {
-    position: absolute; /* 지도 위에 검색창이 위치하도록 */
-    top: 10px; /* 상단에서의 위치 */
-    left: 20px; /* 좌측에서의 위치 */
-    z-index: 10; /* 지도보다 위에 표시 */
-    padding: 0; /* 패딩 제거 */
-    border-radius: 5px; /* 모서리 둥글게 */
+            position: absolute; /* 지도 위에 검색창이 위치하도록 */
+            top: 10px; /* 상단에서의 위치 */
+            left: 20px; /* 좌측에서의 위치 */
+            z-index: 10; /* 지도보다 위에 표시 */
+            padding: 0; /* 패딩 제거 */
+            border-radius: 5px; /* 모서리 둥글게 */
         }
         .header-container {
             align-items: center; /* 세로 정렬 */
@@ -92,7 +90,7 @@ html, body {
     bottom: 0;
     width: 250px; /* 메뉴 너비 */
     height: 140px;
-    margin: 5px;
+    margin: 10px;
     padding: 5px;
     overflow-y: auto; /* 세로 스크롤 추가 */
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
@@ -146,6 +144,12 @@ html, body {
     white-space: nowrap; /* 한 줄로 표시 */
 }
 
+#placesList .item h5 {
+    font-size: 18px; /* 제목 크기 조정 */
+    font-weight: bold; /* 굵게 */
+    color: #333; /* 텍스트 색상 */
+}
+
 /* 장소 정보(info)의 패딩 설정 */
 #placesList .item .info {
     padding: 10px; /* 좌측 여백 추가 */
@@ -154,12 +158,6 @@ html, body {
 /* 정보 영역에서 부가 주소 회색 */
 #placesList .info .gray {
     color: #8a8a8a;
-}
-
-/* 지번 주소 스타일 */
-#placesList .info .jibun {
-    padding-left: 26px; /* 좌측 여백 */
-    background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;
 }
 
 /* 장소 목록 마커 배경 스타일 */
@@ -175,6 +173,8 @@ html, body {
 /* 각각의 마커 위치 설정 */
 #placesList .item .marker_1 {
     background-position: 0 -10px;  }
+
+
 #header-container2 {
     z-index: 1;
     height : 50px;
@@ -285,7 +285,7 @@ html, body {
         /* 커스텀 확대/축소 버튼 */
         .zoom-btn {
             position: absolute;
-            top : 135px;
+            top : 130px;
             right: 20px;
             display: flex;
             flex-direction: column;
