--- a/style.css
+++ b/style.css
@@ -145,9 +145,14 @@ html, body {
 }
 
 #placesList .item h5 {
-    font-size: 10px; /* 제목 크기 조정 */
+    font-size: 15px; /* 제목 크기 조정 */
     font-weight: bold; /* 굵게 */
     color: #333; /* 텍스트 색상 */
+}
+
+/* 장소 정보(info)의 패딩 설정 */
+#placesList .item .info {
+    padding: 10px; /* 좌측 여백 추가 */
 }
 
 /* 장소 목록 마커 배경 스타일 */
