--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ html, body {
 
 /* 장소 정보(info)의 패딩 설정 */
 #placesList .item .info {
-    padding: 10px; /* 좌측 여백 추가 */
+    padding: 5px; /* 좌측 여백 추가 */
 }
 
 /* 장소 목록 마커 배경 스타일 */
@@ -161,7 +161,7 @@ html, body {
     position: absolute;
     width: 36px;
     height: 37px;
-    margin: 10px 0 0 10px;
+    margin: 10px 0;
     background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;
 }
 
