--- a/style.css
+++ b/style.css
@@ -85,15 +85,17 @@ html, body {
 #menu_wrap {
     display: none; /* 기본적으로 표시됨 */
     position: absolute;
-    top: 55px;
-    left: 95px;
+    top: 50px;
+    left: 90px;
     width: 250px; /* 메뉴 너비 */
-    height: 100px;
-    padding: 5px;
+    height: 140px;
+    padding: 0;
+    margin : 0;
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
     z-index: 1; /* 지도 위에 표시되도록 설정 */
     font-size: 12px;
     border-radius: 10px; /* 모서리 둥글게 설정 */
+    box-sizing: border-box;
 }
 
 /* 메뉴 배경을 흰색으로 설정하는 클래스 */
