--- a/style.css
+++ b/style.css
@@ -104,7 +104,14 @@ html, body {
 }
 
 /* 장소 목록 항목의 기본 스타일 */
+#placesList {
+    margin : 0;
+    padding : 0;
+}
+
 #placesList li {
+    margin : 0;
+    padding : 0;
     list-style: none; /* 리스트 스타일 제거 */
 }
 
