--- a/style.css
+++ b/style.css
@@ -85,12 +85,12 @@ html, body {
 #menu_wrap {
     display: none; /* 기본적으로 표시됨 */
     position: absolute;
-    top: 50px;
-    left: 90px;
+    top: 60px;
+    left: 100px;
     width: 250px; /* 메뉴 너비 */
     height: 140px;
-    padding: 0;
-    margin : 0;
+    padding: 10px;
+    margin : 10px;
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
     z-index: 1; /* 지도 위에 표시되도록 설정 */
     font-size: 12px;
