--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ html, body {
     text-overflow: ellipsis; /* 넘칠 경우 말줄임표 */
     overflow: hidden; /* 넘침 숨김 */
     white-space: nowrap; /* 한 줄로 표시 */
+    max-width: 95%;
+    display: block;
     text-align: left;
 }
 
