--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ html, body {
 #menu_wrap {
     display: none; /* 기본적으로 표시됨 */
     position: absolute;
-    top: 50px;
-    left: 90px;
+    top: 60px;
+    left: 100px;
     width: 250px; /* 메뉴 너비 */
     height: 140px;
-    padding: 0;
+    padding: 0 10px;
     margin : 0;
     background: rgba(255, 255, 255, 0.7); /* 반투명 흰색 배경 */
     z-index: 1; /* 지도 위에 표시되도록 설정 */
@@ -105,8 +105,8 @@ html, body {
 
 /* 장소 목록 항목의 기본 스타일 */
 #placesList {
-    margin : 0;
-    padding : 0;
+    margin : 0 10px;
+    padding : 0; 
 }
 
 #placesList li {
